feat(test e2e): added `playwright` dependency and scripts for execute it

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@bytemd/plugin-math": "1.21.0",
     "@bytemd/plugin-mermaid": "1.21.0",
     "@bytemd/react": "1.21.0",
+    "@playwright/test": "^1.44.1",
     "@primer/octicons-react": "19.8.0",
     "@primer/react": "36.7.1",
     "@react-email/components": "0.0.14",
@@ -96,6 +97,8 @@
     "test": "npm run concurrently -- --hide next -- run",
     "test:watch": "vitest watch",
     "test:watch:services": "npm run concurrently -- -- watch",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
     "lint": "npm run lint:next && npm run lint:prettier",
     "lint:next": "next lint --max-warnings=0 --dir .",
     "lint:prettier": "prettier --check .",
