feat(test e2e): update scripts

--- a/package.json
+++ b/package.json
@@ -91,14 +91,17 @@
     "services:down": "npm run docker:compose -- down",
     "docker:compose": "docker compose --env-file .env -f infra/docker-compose.development.yml",
     "preconcurrently": "kill-port 3000 && npm run services:up",
-    "concurrently": "concurrently -s first -P -k -n next,vitest \"npm run next\" \"vitest {@}\"",
+    "concurrently": "concurrently -s first -P -k -n next,vitest_playright \"npm run next\" \"npm run test:integration && npm run test:e2e\"",
     "postconcurrently": "npm run services:stop",
-    "test": "npm run concurrently -- --hide next -- run",
+    "test": "npm run test:unit && npm run concurrently -- --hide next",
+    "test:unit": "vitest run unit",
+    "test:integration": "vitest run integration",
     "test:watch": "vitest watch",
     "test:watch:services": "npm run concurrently -- -- watch",
-    "test:e2e": "playwright test",
-    "test:e2e:ui": "playwright test --ui",
-    "test:e2e:headed": "playwright test --headed",
+    "test:e2e": "npm run test:e2e:dependencies && npx playwright test",
+    "test:e2e:dependencies": "npx playwright install --with-deps",
+    "test:e2e:ui": "npm run test:e2e:dependencies && npx playwright test --ui",
+    "test:e2e:headed": "npm run test:e2e:dependencies && npx playwright test --headed",
     "lint": "npm run lint:next && npm run lint:prettier",
     "lint:next": "next lint --max-warnings=0 --dir .",
     "lint:prettier": "prettier --check .",
